# clifm

./: .SRCINFO  .editorconfig  .gitignore  CHANGELOG  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Makefile.old  PKGBUILD  README.md  REPRODUCER_FINDINGS.md  _config.yml  clifm.c  clifm.desktop  clifm.h  completions.bash  completions.zsh  icons.h  manpage  test_normalize_path.c
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  issue_template.md
.github/workflows/: c-cpp.yml  cmake.yml  codecov.yml  codeql-analysis.yml
functions/: cd_on_quit.fish  cd_on_quit.sh  file_picker.fish  file_picker.sh  install-extensions.fish  subshell_notice.sh
misc/: .SRCINFO  PKGBUILD  actions.cfm  actions.clifm  clifm.1  clifm.desktop  clifmrc  completions.bash  completions.fish  completions.zsh  keybindings  keybindings.cfm  keybindings.clifm  manpage  mime.types  mimelist.cfm  mimelist.clifm  mimelist.example  nets.cfm  nets.clifm  preview.clifm  prompts.cfm  prompts.clifm  readline.cfm  readline.clifm
misc/GNU/: Makefile
misc/cmake/: Makefile
misc/codecov/: actions.c.gcov  archives.c.gcov  aux.c.gcov  bookmarks.c.gcov  checks.c.gcov  colors.c.gcov  config.c.gcov  exec.c.gcov  file_operations.c.gcov  history.c.gcov  init.c.gcov  jump.c.gcov  keybinds.c.gcov  listing.c.gcov  main.c.gcov  mime.c.gcov  misc.c.gcov  navigation.c.gcov  profiles.c.gcov  prompt.c.gcov  properties.c.gcov  readline.c.gcov  remotes.c.gcov  search.c.gcov  selection.c.gcov  sort.c.gcov  strings.c.gcov  suggestions.c.gcov  trash.c.gcov
misc/colors/: aqua.clifm  base16.cfm  base16.clifm  default-256.clifm  default.cfm  default.clifm  dracula-vivid.cfm  dracula-vivid.clifm  dracula.cfm  dracula.clifm  gruvbox.cfm  gruvbox.clifm  jellybeans-vivid.cfm  jellybeans-vivid.clifm  light.cfm  light.clifm  molokai.cfm  molokai.clifm  nocolor.cfm  nocolor.clifm  nord.cfm  nord.clifm  one-dark.cfm  one-dark.clifm  solarized.cfm  solarized.clifm  zenburn.cfm  zenburn.clifm
misc/cygwin/: Makefile
misc/freebsd/: us.clifm.kbd
misc/haiku/: Makefile  keybindings.clifm  readline.cfm  readline.clifm
misc/kitty/: keybindings.clifm  readline.clifm
misc/solaris/: Makefile  prompts.clifm
misc/termux/: Makefile  mimelist.clifm
misc/tools/: deroff.py  manpages_comp_gen.py
misc/tools/imgprev/: README.md  clifmimg  clifmrun
plugins/: .plugins-helper  BFG.cfg  BFG.sh  batch_copy.sh  batch_create.sh  bm_import.sh  checks.c  clip.sh  colors.sh  cp2rm.sh  cprm.sh  decrypt.sh  disk_analyzer.sh  dragndrop.sh  dragondrop.sh  encrypt.sh  example.sh  exec.c  fdups.sh  file_picker.sh  finder.sh  fzcd.sh  fzfdesel.sh  fzfdirhist.sh  fzfhist.sh  fzfnav.sh  fzfsel.sh  git_status.sh  ihelp.sh  img_viewer.sh  jumper.sh  kbgen  kbgen.c  m_git_prompt_status  m_hostname_color  mime_list.sh  music_player.sh  pager.sh  pdf_viewer.sh  plugins-helper  (+8 more)
src/: .clang-format  .clang-tidy  Makefile  README.md  _clang-format  _clang-tidy  actions.c  actions.h  archives.c  archives.h  args.c  args.h  autocmds.c  autocmds.h  aux.c  aux.h  bookmarks.c  bookmarks.h  builtins.h  bulk_remove.c  bulk_remove.h  bulk_rename.c  bulk_rename.h  checks.c  checks.h  cleaner_table.h  clifm.c  clifm.h  colors.c  colors.h  colorterms.h  compat.c  compat.h  config.c  config.h  dothidden.c  dothidden.h  exec.c  exec.h  fast_magic.c  (+105 more)
translations/: clifm.pot  es.po
translations/chinese/: clifm.po
translations/german/: clifm.po
translations/spanish/: clifm.mo  clifm.po
